# adm

./: .gitignore  Makefile.am  acccfg.cpp  admin.cpp  config.h.in  configure.ac  doxygen.doxyfile  ethcfg.cpp  ev.c  fwupd.cpp  misc.c  misc_air192.cpp  mod_cli.cpp  mod_gpio.cpp  priv.h  readme.md  spkcal.cpp  test1.cpp  unitest.c  wificfg.cpp
include/admin/: admin.h  air192.h  unitest.h
test/: admin2.html  lighttpd.conf
